--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,13 @@
-//
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow:500&display=swap');
+
+// Variables
+@import 'variables';
+@import 'custom';
+@import '~@fortawesome/fontawesome-free/scss/brands';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
