--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,7 +2,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Archivo Narrow', sans-serif;
+$font-family-sans-serif: 'Roboto', sans-serif;
 $font-size-base: 1rem;
 $line-height-base: 1.6;
 
